[package]
name = "gsm"
version = "1.2.2"
authors = ["David Huseby"]
edition = "2018"
description = "A very simple generic stack machine crate"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dhuseby/gsm"

[dependencies]
bytes = "0.5"
hex = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
