[package]
name = "gsm"
version = "1.3.0"
authors = ["David Huseby"]
edition = "2018"
description = "A very simple generic stack machine crate"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dhuseby/gsm"

[dependencies]
bytes = "0.5"
hex = "0.4"
semver = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
